--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.19.1",
     "html-react-parser": "^0.13.0",
+    "json2mq": "^0.2.0",
     "material-table": "1.68.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
